--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="EOS Tracker">
+	<meta name="description" content="EOS Tracker, Real time viewer for EOS Blockchain">
 	<meta name="author" content="Cesar Rodriguez">
 
-	<title>EOS Tracker</title>
+	<title>EOS Tracker | Real time viewer for EOS Blockchain</title>
 
 	<base href="/">
 
