--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,8 @@
 <script src="assets/vendor/flot-tooltip/jquery.flot.tooltip.min.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138322-51"></script>
+<script async src="//www.googletagmanager.com/gtag/js?id=UA-138322-51"></script>
+<script async src="//maps.googleapis.com/maps/api/js?key=AIzaSyAm8XqMj1dCSiEDlfb4c5KlZ9kbcBmTLS0"></script>
 <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
