--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="EOS Tracker, Real time viewer for EOS Blockchain">
+  <meta name="description" content="EOS Tracker, Real time viewer for EOSIO Blockchains">
   <meta name="author" content="Cesar Rodriguez">
 
-  <title>EOS Tracker | Real time viewer for EOS Blockchain</title>
+  <title>EOS Tracker | Real time viewer for EOSIO Blockchains</title>
 
   <base href="/">
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="/assets/fonts/fonts.css" rel="stylesheet">
 </head>
 
 <body>
