Change App Title to Liberland

--- a/src/index.html
+++ b/src/index.html
@@ -2,37 +2,36 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="EOS Tracker, Real time viewer for EOSIO Blockchains">
-  <meta name="author" content="Cesar Rodriguez">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="EOS Tracker, Real time viewer for EOSIO Blockchains">
+    <meta name="author" content="Cesar Rodriguez">
 
-  <title>EOS Tracker | Real time viewer for EOSIO Blockchains</title>
+    <title>Liberland Explorer | Real time viewer for Liberland Blockchain</title>
 
-  <base href="/">
+    <base href="/">
 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-  <link href="/assets/fonts/fonts.css" rel="stylesheet">
+    <link href="/assets/fonts/fonts.css" rel="stylesheet">
 </head>
 
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="//www.googletagmanager.com/gtag/js?id=UA-138322-51"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="//www.googletagmanager.com/gtag/js?id=UA-138322-51"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-138322-51');
-
-  </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-138322-51');
+    </script>
 </body>
 
 </html>
